# Timetracker

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
